@@ -100,6 +100,9 @@ def emit_type_comprehension_type(tc_type):
 def emit_type_comprehension_pointer(pointer):
     result = {"kind": "Pointer"}
 
+    if hasattr(pointer, 'nullable'):
+        result["is_nullable"] = pointer.nullable
+
     result["inner_type"] = emit_type_comprehension_element(pointer.target)
 
     emit_type_comprehension_storage_classes(result, pointer.storage_classes)
@@ -199,7 +202,14 @@ def emit_function_pointer_type(function_ptr):
 def emit_type(type_info, declaration_suffix=""):
     result = {}
 
+    # The regular declaration
     declaration = type_info.to_c_string() + declaration_suffix
+
+    # A version of the declaration with non-nullable pointers marked as ^ instead of *
+    # (which the type comprehender knows how to interpret and output with appropriate annotations)
+    context = code_dom.WriteContext()
+    context.mark_non_nullable_pointers = True
+    declaration_with_non_nullable_pointers = type_info.to_c_string(context) + declaration_suffix
 
     result["declaration"] = declaration
 
@@ -208,7 +218,7 @@ def emit_type(type_info, declaration_suffix=""):
         result["type_details"] = emit_function_pointer_type(type_info)
 
     # Emit type description as generated by the type comprehension system
-    description_type = type_comprehension.type_comprehender.get_type_description(declaration)
+    description_type = type_comprehension.type_comprehender.get_type_description(declaration_with_non_nullable_pointers)
     result["description"] = emit_type_comprehension_element(description_type)
 
     return result
